@@ -1,5 +1,9 @@
 2004-12-09 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/fat16: use mkdosfs -F16 instead of libparted to create fat16 filesystems 
+
+2004-12-09 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/ext2.cc,
 	  src/ext3.cc,
 	  src/ntfs.cc,
